--- a/kickstart/package.json
+++ b/kickstart/package.json
@@ -21,6 +21,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.438.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.6.1",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
