--- a/kickstart/package.json
+++ b/kickstart/package.json
@@ -30,6 +30,7 @@
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-brackets": "^0.4.7",
     "react-dom": "^18",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
