--- a/kickstart/package.json
+++ b/kickstart/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.438.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.1",
@@ -32,6 +33,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-brackets": "^0.4.7",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
