--- a/kickstart/package.json
+++ b/kickstart/package.json
@@ -32,6 +32,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.1",
     "next": "14.2.7",
+    "next-auth": "^5.0.0-beta.21",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-brackets": "^0.4.7",
